# msgraph-user

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
msgraph_user/: __init__.py
src/msgraph_user/: __init__.py  msgraph_user.py
tests/: test_msgraph_user.py
